# aqua

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src/: App.css  App.tsx  ArrowExtension.ts  CheckboxExtension.ts  Editor.tsx  Preview.tsx  index.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Editor.tsx  Preview.tsx  Sidebar.tsx  SplitPane.css  SplitPane.tsx  StatusBar.tsx  ThemeToggle.tsx
src/extensions/: ArrowExtension.ts  CheckboxExtension.ts  LatexExtension.ts
src/lib/editor/: oceanTheme.ts
src/lib/styles/: animations.css  global.css  tokens.css  typography.css
src/store/: fileState.ts  fileTreeTypes.ts  store.ts  themeState.ts
src/styles/: global.css  main.css  tokens.css  typography.css
src/styles/components/: editor.css  layout.css  preview.css  sidebar.css  statusBar.css  themeToggle.css
src/styles/themes/: oceanTheme.ts
src/tests/: components.test.tsx  export.test.ts  extensions.test.ts  fileLoader.test.ts  fileState.test.ts  setup.ts  store.test.ts  testUtils.ts
src/utils/: export.ts  fileLoader.ts
