[package]
name = "aqua"
version = "0.1.0"
description = "A Tauri App"
authors = ["Ioan-Alexandru Scheusan"]
edition = "2021"

[lib]
name = "aqua_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-fs = "2.4"
tauri-plugin-dialog = "2.4"
tauri-plugin-clipboard-manager = "2"   # clipboard
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
