[package]
name = "aqua"
version = "0.1.0"
description = "A Tauri App"
authors = ["Ioan-Alexandru Scheusan"]
edition = "2021"

[lib]
name = "aqua_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serial_test = "3.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-fs = "2.4"
tauri-plugin-dialog = "2.4"
tauri-plugin-clipboard-manager = "2"   # clipboard
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
fs = "0.0.5"
notify = "8.2.0"
chrono = "0.4.43"
tauri-plugin-shell = "2.3.5"
